Start project setup.

--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,14 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [packages]
+arrow = "*"
+h5py = ">=3.7"
+icecream = "*"
+numpy = ">=1.23"
+open3d = "*"
+taipy = "*"
+
+metashape = { path = "./vendor/Metashape-2.1.0-cp37.cp38.cp39.cp310.cp311-abi3-linux_x86_64.whl" }
 
 [dev-packages]
 pytest = "*"
@@ -11,7 +19,7 @@ setuptools = "*"
 twine = "*"
 
 [requires]
-python = "3.10"
+python = "3.11"
 
 [scripts]
 tests = "python -m unittest"
