Add label reading and file retrieval for image groups.

--- a/Pipfile
+++ b/Pipfile
@@ -30,4 +30,4 @@ python = "3.11"
 tests = "python -m unittest"
 main = "python -m main"
 build = "python -m setup bdist_wheel sdist"
-lint = "pylint ./libtemp ./tests"
+lint = "pylint ./benthoscan ./tests"
