--- a/Pipfile
+++ b/Pipfile
@@ -5,20 +5,25 @@ verify_ssl = true
 
 [packages]
 arrow = "*"
+fastapi = "*"
 h5py = ">=3.7"
 icecream = "*"
+jinja2 = "*"
 loguru = "*"
 numpy = ">=1.23"
 open3d = "*"
 pandas = "*"
+pydantic = "*"
 result = "*"
 taipy = "*"
+uvicorn = "*"
 toml = "*"
 tqdm = "*"
 
 metashape = { path = "./vendor/Metashape-2.1.0-cp37.cp38.cp39.cp310.cp311-abi3-linux_x86_64.whl" }
 
 [dev-packages]
+black = "*"
 pytest = "*"
 setuptools = "*"
 twine = "*"
