--- a/config/stereo.toml
+++ b/config/stereo.toml
@@ -13,7 +13,7 @@ slaves = ["right"]
 # Camera reference formats
 [cameras.left.formats]
 position = "WGS84"
-orientation = "RPY"
+orientation = "YPR"
 
 # Maps from table columns to camera fields
 [cameras.left.maps]
@@ -23,15 +23,15 @@ labels = [
 ]
 
 position = [
-    { name="x", column="latitude", required=true, default=0.0 },
-    { name="y", column="longitude", required=true, default=0.0 },
+    { name="x", column="longitude", required=true, default=0.0 },
+    { name="y", column="latitude", required=true, default=0.0 },
     { name="z", column="height", required=true, default=0.0 },
 ]
 
 orientation = [
-    { name="x", column="roll", required=true, default=0.0 },
+    { name="x", column="yaw", required=true, default=0.0 },
     { name="y", column="pitch", required=true, default=0.0 },
-    { name="z", column="yaw", required=true, default=0.0 },
+    { name="z", column="roll", required=true, default=0.0 },
 ]
 
 
