--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ packages = [{include = "benthoscan", from="src"}]
 package-mode = true
 
 [tool.poetry.dependencies]
-python = ">=3.11"
+python = "^3.11"
 arrow = "^1.3.0"
 h5py = "^3.11.0"
 loguru = "^0.7.2"
