Major refactor of create / setup task. Revamp task configuration, add data frame builders for cameras and references.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ tqdm = "^4.66.2"
 open3d = "^0.18.0"
 metashape = {path = "vendor/Metashape-2.1.0-cp37.cp38.cp39.cp310.cp311-abi3-linux_x86_64.whl"}
 pyyaml = "^6.0.1"
+polars = "^0.20.30"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.0"
