Add reconstruction task and CLI entrypoint. Add sparse and dense processor builders.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,4 +33,5 @@ black = "^24.4.2"
 
 [tool.poetry.scripts]
 create = "benthoscan.runtime.cli:main"
+reconstruct = "benthoscan.runtime.cli:main"
 summarize = "benthoscan.runtime.cli:main"
