--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,10 +32,12 @@ scipy = "^1.13.1"
 scikit-learn = "^1.5.0"
 addict = "^2.4.0"
 pillow = "^10.3.0"
+dash = "^2.17.1"
+
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.0"
-black = "^24.4.2"
+black = {extras = ["jupyter"], version = "^24.4.2"}
 jupyter = "^1.0.0"
 ruff = "^0.4.9"
 
