--- a/config/chunks/r7jjss8n.toml
+++ b/config/chunks/r7jjss8n.toml
@@ -2,16 +2,17 @@
 name = "r7jjss8n_20101023_210332"
 image_directory = "acfr_images_processed/r7jjss8n_20101023_210332_images"
 camera_file = "acfr_cameras_prior/r7jjss8n_20101023_210332_cameras.csv"
-camera_config = "config/stereo_config.toml"
+camera_config = "config/sensors/stereo_config.toml"
 
 [[chunk]]
 name = "r7jjss8n_20121013_060425"
 image_directory = "acfr_images_processed/r7jjss8n_20121013_060425_images"
 camera_file = "acfr_cameras_prior/r7jjss8n_20121013_060425_cameras.csv"
-camera_config = "config/stereo_config.toml"
+camera_config = "config/sensors/stereo_config.toml"
 
 [[chunk]]
 name = "r7jjss8n_20131022_004934"
 image_directory = "acfr_images_processed/r7jjss8n_20131022_004934_images"
 camera_file = "acfr_cameras_prior/r7jjss8n_20131022_004934_cameras.csv"
-camera_config = "config/stereo_config.toml"
+camera_config = "config/sensors/stereo_config.toml"
+
