--- a/config/chunks/template.toml
+++ b/config/chunks/template.toml
@@ -2,4 +2,5 @@
 name = "CHUNK_NAME"
 image_directory = "acfr_images_processed/CHUNK_NAME_images"
 camera_file = "acfr_cameras_prior/CHUNK_NAME_cameras.csv"
-camera_config = "config/stereo_config.toml"
+camera_config = "config/sensors/stereo_config.toml"
+
