--- a/config/data_descriptors/r7jjssbh.toml
+++ b/config/data_descriptors/r7jjssbh.toml
@@ -1,18 +1,18 @@
 [[chunk]]
 name = "r7jjssbh_20101023_210332"
 image_directory = "acfr_images_processed/r7jjssbh_20101023_210332_images"
-camera_file = "acfr_cameras_prior/r7jjssbh_20101023_210332_cameras.csv"
+camera_data = "acfr_cameras_prior/r7jjssbh_20101023_210332_cameras.csv"
 camera_config = "config/sensors/stereo_config.toml"
 
 [[chunk]]
 name = "r7jjssbh_20121013_060425"
 image_directory = "acfr_images_processed/r7jjssbh_20121013_060425_images"
-camera_file = "acfr_cameras_prior/r7jjssbh_20121013_060425_cameras.csv"
+camera_data = "acfr_cameras_prior/r7jjssbh_20121013_060425_cameras.csv"
 camera_config = "config/sensors/stereo_config.toml"
 
 [[chunk]]
 name = "r7jjssbh_20131022_004934"
 image_directory = "acfr_images_processed/r7jjssbh_20131022_004934_images"
-camera_file = "acfr_cameras_prior/r7jjssbh_20131022_004934_cameras.csv"
+camera_data = "acfr_cameras_prior/r7jjssbh_20131022_004934_cameras.csv"
 camera_config = "config/sensors/stereo_config.toml"
 
