--- a/config/data_descriptors/template.toml
+++ b/config/data_descriptors/template.toml
@@ -1,6 +1,6 @@
 [[chunk]]
 name = "CHUNK_NAME"
 image_directory = "acfr_images_processed/CHUNK_NAME_images"
-camera_file = "acfr_cameras_prior/CHUNK_NAME_cameras.csv"
+camera_data = "acfr_cameras_prior/CHUNK_NAME_cameras.csv"
 camera_config = "config/sensors/stereo_config.toml"
 
