--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python = "^3.11"
 arrow = "^1.3.0"
 h5py = "^3.11.0"
 loguru = "^0.7.2"
+msgspec = "^0.18.6"
 numpy = "^1.26.4"
 open3d = "0.18.0"
 opencv-python = "^4.10.0.84"
@@ -25,10 +26,8 @@ python-dotenv = "^1.0.1"
 pillow = "^10.3.0"
 plotly = "^5.22.0"
 polars = "^0.20.30"
-pyyaml = "^6.0.1"
 result = "^0.16.1"
 scipy = "^1.13.1"
-toml = "^0.10.2"
 tqdm = "^4.66.2"
 
 # Needed by open3d
