--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,16 +13,25 @@ package-mode = true
 
 [tool.poetry.dependencies]
 python = "^3.11"
+
+# Local wheel file
+metashape = {path = "vendor/Metashape-2.1.0-cp37.cp38.cp39.cp310.cp311-abi3-linux_x86_64.whl"}
+
+# Needed by open3d
+scikit-learn = "^1.5.0"
+addict = "^2.4.0"
+
 arrow = "^1.3.0"
 h5py = "^3.11.0"
+imageio = "^2.35.1"
 loguru = "^0.7.2"
+kornia = "^0.7.3"
 numpy = "^1.26.4"
 open3d = "0.18.0"
 opencv-python = "^4.10.0.84"
 opencv-contrib-python = "^4.10.0.84"
 pandas = "^2.2.2"
 python-dotenv = "^1.0.1"
-pillow = "^10.3.0"
 plotly = "^5.22.0"
 polars = "^0.20.30"
 pyyaml = "^6.0.1"
@@ -30,13 +39,6 @@ result = "^0.16.1"
 scipy = "^1.13.1"
 toml = "^0.10.2"
 tqdm = "^4.66.2"
-
-# Needed by open3d
-scikit-learn = "^1.5.0"
-addict = "^2.4.0"
-
-# Local wheel file
-metashape = {path = "vendor/Metashape-2.1.0-cp37.cp38.cp39.cp310.cp311-abi3-linux_x86_64.whl"}
 
 
 [tool.poetry.group.experimental.dependencies]
