--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ pandas = "^2.2.2"
 python-dotenv = "^1.0.1"
 plotly = "^5.22.0"
 polars = "^0.20.30"
+pyarrow = "^17.0.0"                     # Needed by polars
 result = "^0.16.1"
 scikit-learn = "^1.5.0"                 # Needed by open3d
 scipy = "^1.13.1"
