Update camera services in backend, and add camera and project data getters to the API.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,4 +54,4 @@ ruff = "^0.4.9"
 
 [tool.poetry.scripts]
 mynd = "mynd.cli.entrypoint:main"
-backend = "mynd.backends.runner:main"
+backend = "mynd.backend.runner:main"
