--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,15 @@ packages = [{include = "mynd", from="src"}]
 package-mode = true
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "~3.11"
 
 # Local wheel file
 metashape = {path = "vendor/Metashape-2.1.0-cp37.cp38.cp39.cp310.cp311-abi3-linux_x86_64.whl"}
 
-addict = "^2.4.0"                       # Needed by open3d
+# TODO: Find approach to add these as dependencies to open3d
+scikit-learn = "^1.5.0"                   # Needed by open3d
+addict = "^2.4.0"                         # Needed by open3d
+
 arrow = "^1.3.0"
 h5py = "^3.11.0"
 imageio = "^2.35.1"
@@ -26,16 +29,13 @@ kornia = "^0.7.3"
 msgspec = "^0.18.6"
 numpy = "^1.26.4"
 onnxruntime-gpu = "^1.19.0"
-open3d = "0.18.0"
+open3d = {extras = ["ml"], version = "^0.18.0"}
 opencv-python = "^4.10.0.84"
 opencv-contrib-python = "^4.10.0.84"
-pandas = "^2.2.2"
 python-dotenv = "^1.0.1"
 plotly = "^5.22.0"
-polars = "^0.20.30"
-pyarrow = "^17.0.0"                     # Needed by polars
+polars = {extras = ["numpy", "pyarrow", "pandas"], version = "^1.7.1"}
 result = "^0.16.1"
-scikit-learn = "^1.5.0"                 # Needed by open3d
 scipy = "^1.13.1"
 tqdm = "^4.66.2"
 
