Add camera export handler. Add HDF writers for camera attribute and references. Update black settings and linter code.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,3 +57,13 @@ ruff = "^0.4.9"
 [tool.poetry.scripts]
 mynd = "mynd.cli.entrypoint:main"
 backend = "mynd.backend.runner:main"
+
+
+[tool.black]
+skip-string-normalization = true
+line-length = 80
+
+
+[tool.ruff]
+# Same as Black.
+line-length = 80
