--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ description = "A small API for 3D reconstruction and registration based on image
 authors = ["Martin Kvisvik Larsen <martin.kvisvik.larsen@hotmail.com>"]
 readme = "README.md"
 packages = [{include = "mynd", from="src"}]
-package-mode = true
+package-mode = false
 
 
 [tool.poetry.dependencies]
