--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ arrow = "^1.3.0"
 h5py = "^3.11.0"
 imageio = "^2.35.1"
 loguru = "^0.7.2"
-kornia = "^0.7.3"
+kornia = "0.7.4"
 msgspec = "^0.18.6"
 # NOTE: Memory leak due to numpy and open3d versions: https://github.com/isl-org/Open3D/issues/1787
 numpy = "^1.19.0"
