--- a/config/registration_advanced.toml
+++ b/config/registration_advanced.toml
@@ -14,19 +14,21 @@ convergence = {max_iteration = 50000000, confidence = 1.0}
 algorithm = {distance_threshold = 0.15, sample_count = 3, mutual_filter = true}
 
 
+
 [[registration.refiner]]
 name = "02_coarse_colored_icp"
 type = "colored_icp" # Options are: colored_icp, regular_icp
 
 [registration.refiner.preprocessor]
 downsample = { spacing = 0.20 }
+estimate_normals = {radius = 0.40, neighbours = 30}
 
 [registration.refiner.matcher]
 colored_icp_estimation = { lambda_geometric = 0.968 }
 huber_kernel = { k = 0.40 }
 convergence_criteria = { relative_fitness = 1e-6, relative_rmse = 1e-6, max_iteration = 50 }
-# Common parameters
 distance_threshold = 0.20
+
 
 
 [[registration.refiner]]
@@ -35,13 +37,14 @@ type = "colored_icp" # Options are: colored_icp, regular_icp
 
 [registration.refiner.preprocessor]
 downsample = { spacing = 0.05 }
+estimate_normals = {radius = 0.10, neighbours = 30}
 
 [registration.refiner.matcher]
 colored_icp_estimation = { lambda_geometric = 0.968 }
 huber_kernel = { k = 0.40 }
 convergence_criteria = { relative_fitness = 1e-6, relative_rmse = 1e-6, max_iteration = 50 }
-# Common parameters
 distance_threshold = 0.05
+
 
 
 [[registration.refiner]]
@@ -50,10 +53,10 @@ type = "colored_icp" # Options are: colored_icp, regular_icp
 
 [registration.refiner.preprocessor]
 downsample = { spacing = 0.02 }
+estimate_normals = {radius = 0.04, neighbours = 30}
 
 [registration.refiner.matcher]
 colored_icp_estimation = { lambda_geometric = 0.968 }
 huber_kernel = { k = 0.40 }
 convergence_criteria = { relative_fitness = 1e-6, relative_rmse = 1e-6, max_iteration = 50 }
-# Common parameters
 distance_threshold = 0.02
